# JAMIK

./: .gitignore  README.md
app/: Dockerfile  check_flag.py  pyproject.toml
app/migrations/: env.py
app/migrations/versions/: 0f0006e20486_user_id_id.py  4e05dc124cbe_create_data_base.py  5f96807f0951_change_column_name_in_menu_table.py  6b991d925ae4_change_menu_table.py  70d8d728dd68_create_table.py  78b1816547d5_database_creation.py  803ac9cc8d66_create_database.py  b61815984223_create_data_base.py  e957ab8bef1f_create_data_base.py  fb0cbb8a5214_create_tables.py
app/src/: config.py  database.py  main.py
app/src/auth/: base_config.py  manager.py  schemas.py  utils.py
app/src/menu/: router.py  schemas.py
app/src/models/: models.py
app/src/restaurants/: allergens_insert.py  router.py  schemas.py
app/src/user_preferences/: router.py  schemas.py
app/templates/: menu.html
