[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Artem Sorokin <85310022+juman-j@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
alembic = "^1.11.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
asyncpg = "^0.27.0" # asynchronní náhrada psycopg2-binary
pandas = "^2.0.2"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"
flower = "^1.2.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
